--- a/views/partials/headercopy.ejs
+++ b/views/partials/headercopy.ejs
@@ -32,7 +32,8 @@
                                     <li><a href="#"><img src="Userassets/imgs/theme/flag-ru.png" alt="">Pусский</a></li>
                                 </ul>
                             </li>
-                            <li><i class="fi-rs-user"></i><a href="page-login-register.html">Log In / Sign Up</a></li>
+                            <li><i class="fi-rs-user"></i><a href="/login">Log In </a></li>
+                            <li><i class="fi-rs-user"></i><a href="/signup">Sign Up</a></li>
                         </ul>
                     </div>
                 </div>
@@ -43,7 +44,7 @@
         <div class="container">
             <div class="header-wrap d-flex " style="justify-content: space-between;">
                 <div class="logo logo-width-1">
-                    <a href="index.html"><img  src="Userassets/imgs/theme/headphone.png" alt="logo"></a>
+                    <a href="/"><img  src="Userassets/imgs/theme/headphone.png" alt="logo"></a>
                 </div>
                
                     <div class="header-action-right ">
