--- a/views/partials/headercopy.ejs
+++ b/views/partials/headercopy.ejs
@@ -5,7 +5,7 @@
                 <div class="col-xl-3 col-lg-4">
                     <div class="header-info">
                         <ul>
-                            <li><i class="fi-rs-smartphone"></i> <a href="#">(9645801852)</a></li>
+                            <li><i class="fi-rs-smartphone"></i> <a href="#">9645801852</a></li>
                             <li><i class="fi-rs-marker"></i><a  href="page-contact.html">Our location</a></li>
                         </ul>
                     </div>
@@ -32,7 +32,7 @@
                                     <li><a href="#"><img src="Userassets/imgs/theme/flag-ru.png" alt="">Pусский</a></li>
                                 </ul>
                             </li>
-                            <li><i class="fi-rs-user"></i><a href="/login">Log In </a></li>
+                            <li><i class="fi-rs-user"></i><a href="/login">Log In</a></li>
                             <li><i class="fi-rs-user"></i><a href="/signup">Sign Up</a></li>
                         </ul>
                     </div>
@@ -42,21 +42,22 @@
     </div>
     <div class="header-middle header-middle-ptb-1 d-none d-lg-block">
         <div class="container">
-            <div class="header-wrap d-flex " style="justify-content: space-between;">
+            <div class="header-wrap">
                 <div class="logo logo-width-1">
-                    <a href="/"><img  src="Userassets/imgs/theme/headphone.png" alt="logo"></a>
+                    <a href="/"><img src="Userassets/imgs/theme/headphone.png" alt="logo"></a>
                 </div>
-               
-                    <div class="header-action-right ">
+                <div class="header-right">
+                    <div class="search-style-2">
+                     
+                    </div>
+                    <div class="header-action-right">
                         <div class="header-action-2">
-                            <div class="header-action-icon-2 text-end">
+                            <div class="header-action-icon-2">
                                 <a href="shop-wishlist.html">
                                     <img class="svgInject" alt="Evara" src="Userassets/imgs/theme/icons/icon-heart.svg">
                                     <span class="pro-count blue">4</span>
                                 </a>
                             </div>
-                            
-                    
                             <div class="header-action-icon-2">
                                 <a class="mini-cart-icon" href="shop-cart.html">
                                     <img alt="Evara" src="Userassets/imgs/theme/icons/icon-cart.svg">
@@ -112,95 +113,28 @@
                 <div class="logo logo-width-1 d-block d-lg-none">
                     <a href="index.html"><img src="Userassets/imgs/theme/logo.svg" alt="logo"></a>
                 </div>
-                <div class="header-nav d-none d-lg-flex">
-                    
+               
                     <div class="main-menu main-menu-padding-1 main-menu-lh-2 d-none d-lg-block">
                         <nav>
                             <ul>
-                                <li><a class="active" href="index.html">Home <i class=></i></a>
-                                    <ul class>
-
-                                    </ul>
+                                <li><a class="active" href="/">Home <i class="fi-rs-angle-down"></i></a>
+                                    
                                 </li>
                                 <li>
                                     <a href="page-about.html">About</a>
                                 </li>
-                                <li><a href="shop-grid-right.html">Shop <i class=></i></a>
-                                    <ul class=>
-                                       
-                                            <ul class="level-menu">
-                                              
-                                            </ul>
-                                        </li>
-
-                                        </ul>
-                                </li>
-                                                <div class="menu-banner-discount">
-                                                    <h3>
-                                                     
-                                                    </h3>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </li>
+                                <li><a href="shop-grid-right.html">Shop <i class="fi-rs-angle-down"></i></a>
                                 
+                                </li>
                                
-                <div class="hotline d-none d-lg-block">
-                  
+                                <li>
+                                    <a href="page-contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-                <p class="mobile-promotion">Happy <span class="text-brand">Mother's Day</span>. Big Sale Up to 40%</p>
-                <div class="header-action-right d-block d-lg-none">
-                    <div class="header-action-2">
-                        <div class="header-action-icon-2">
-                            <a href="shop-wishlist.html">
-                                <img alt="Evara" src="Userassets/imgs/theme/icons/icon-heart.svg">
-                                <span class="pro-count white">4</span>
-                            </a>
-                        </div>
-                        <div class="header-action-icon-2">
-                            <a class="mini-cart-icon" href="shop-cart.html">
-                                <img alt="Evara" src="Userassets/imgs/theme/icons/icon-cart.svg">
-                                <span class="pro-count white">2</span>
-                            </a>
-                            <div class="cart-dropdown-wrap cart-dropdown-hm2">
-                                <ul>
-                                    <li>
-                                        <div class="shopping-cart-img">
-                                            <a href="shop-product-right.html"><img alt="Evara" src="Userassets/imgs/shop/thumbnail-3.jpg"></a>
-                                        </div>
-                                        <div class="shopping-cart-title">
-                                            <h4><a href="shop-product-right.html">Plain Striola Shirts</a></h4>
-                                            <h3><span>1 × </span>$800.00</h3>
-                                        </div>
-                                        <div class="shopping-cart-delete">
-                                            <a href="#"><i class="fi-rs-cross-small"></i></a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="shopping-cart-img">
-                                            <a href="shop-product-right.html"><img alt="Evara" src="Userassets/imgs/shop/thumbnail-4.jpg"></a>
-                                        </div>
-                                        <div class="shopping-cart-title">
-                                            <h4><a href="shop-product-right.html">Macbook Pro 2022</a></h4>
-                                            <h3><span>1 × </span>$3500.00</h3>
-                                        </div>
-                                        <div class="shopping-cart-delete">
-                                            <a href="#"><i class="fi-rs-cross-small"></i></a>
-                                        </div>
-                                    </li>
-                                </ul>
-                                <div class="shopping-cart-footer">
-                                    <div class="shopping-cart-total">
-                                        <h4>Total <span>$383.00</span></h4>
-                                    </div>
-                                    <div class="shopping-cart-button">
-                                        <a href="shop-cart.html">View cart</a>
-                                        <a href="shop-checkout.html">Checkout</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+              
                         <div class="header-action-icon-2 d-block d-lg-none">
                             <div class="burger-icon burger-icon-white">
                                 <span class="burger-icon-top"></span>
