--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -9,22 +9,22 @@
                     <div class="row align-items-center slider-animated-1">
                         <div class="col-lg-5 col-md-6">
                             <div class="hero-slider-content-2">
-                                <h4 class="animated">Trade-in offer</h4>
-                                <h2 class="animated fw-900">Supper value deals</h2>
+                                <h4 class="animated">Exhales Worries</h4>
+                                <h2 class="animated fw-900">With Headphones</h2>
                                 <h1 class="animated fw-900 text-brand">On all products</h1>
-                                <p class="animated">Save more with coupons & up to 70% off</p>
+                                <!-- <p class="animated">Save more with coupons & up to 70% off</p> -->
                                 <a class="animated btn btn-brush btn-brush-3" href="shop-product-right.html"> Shop Now </a>
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
                             <div class="single-slider-img single-slider-img-1">
-                                <img class="animated slider-1-1" src="Userassets/imgs/slider/slider-1.png" alt="">
+                                <img class="animated slider-1-1" src="Userassets/imgs/slider/slider.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="single-hero-slider single-animation-wrap">
+            <!-- <div class="single-hero-slider single-animation-wrap">
                 <div class="container">
                     <div class="row align-items-center slider-animated-1">
                         <div class="col-lg-5 col-md-6">
@@ -62,12 +62,12 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
-        <div class="slider-arrow hero-slider-1-arrow"></div>
+        <!-- <div class="slider-arrow hero-slider-1-arrow"></div> -->
     </section>
-    <section class="featured section-padding position-relative">            
+    <!-- <section class="featured section-padding position-relative">            
         <div class="container">
             <div class="row">
                 <div class="col-lg-2 col-md-4 mb-md-3 mb-lg-0">
@@ -108,8 +108,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="product-tabs section-padding position-relative wow fadeIn animated">
+    </section> -->
+    <!-- <section class="product-tabs section-padding position-relative wow fadeIn animated">
         <div class="bg-square"></div>
         <div class="container">
             <div class="tab-header">
@@ -127,7 +127,7 @@
                 <a href="#" class="view-more d-none d-md-flex">View More<i class="fi-rs-angle-double-small-right"></i></a>
             </div>
             <!--End nav-tabs-->
-            <div class="tab-content wow fadeIn animated" id="myTabContent">
+            <!-- <div class="tab-content wow fadeIn animated" id="myTabContent">
                 <div class="tab-pane fade show active" id="tab-one" role="tabpanel" aria-labelledby="tab-one">
                     <div class="row product-grid-4">
                         <div class="col-lg-3 col-md-4 col-12 col-sm-6">
@@ -137,8 +137,8 @@
                                         <a href="shop-product-right.html">
                                             <img class="default-img" src="Userassets/imgs/shop/product-1-1.jpg" alt="">
                                             <img class="hover-img" src="Userassets/imgs/shop/product-1-2.jpg" alt="">
-                                        </a>
-                                    </div>
+                                        </a> -->
+                                    <!-- </div>
                                     <div class="product-action-1">
                                         <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal"><i class="fi-rs-eye"></i></a>
                                         <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
@@ -430,11 +430,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!--End product-grid-4-->
-                </div>
+                <!-- </div> -->
                 <!--En tab one (Featured)-->
-                <div class="tab-pane fade" id="tab-two" role="tabpanel" aria-labelledby="tab-two">
+                <!-- <div class="tab-pane fade" id="tab-two" role="tabpanel" aria-labelledby="tab-two">
                     <div class="row product-grid-4">
                         <div class="col-lg-3 col-md-4 col-12 col-sm-6">
                             <div class="product-cart-wrap mb-30">
@@ -736,11 +736,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!--End product-grid-4-->
-                </div>
+                <!-- </div> -->
                 <!--En tab two (Popular)-->
-                <div class="tab-pane fade" id="tab-three" role="tabpanel" aria-labelledby="tab-three">
+                <!-- <div class="tab-pane fade" id="tab-three" role="tabpanel" aria-labelledby="tab-three">
                     <div class="row product-grid-4">
                         <div class="col-lg-3 col-md-4 col-12 col-sm-6">
                             <div class="product-cart-wrap mb-30">
@@ -1042,14 +1042,14 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!--End product-grid-4-->
-                </div>
+                <!-- </div> -->
                 <!--En tab three (New added)-->
-            </div>
+            <!-- </div> -->
             <!--End tab-content-->
-        </div>
-    </section>
+        <!-- </div> -->
+    </section> -->
    
   
     </section>
