--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -147,7 +147,7 @@
                             document.getElementById('passEmail').innerHTML=''
                         },1500)
                     }else if(response.status===true){
-                        window.location.href="/admin/admindash"
+                        window.location.href="/admin/home"
                     }
                 }
             })
