--- a/views/admin/customer.ejs
+++ b/views/admin/customer.ejs
@@ -31,12 +31,12 @@
         <nav>
             <ul class="menu-aside">
                 <li class="menu-item active">
-                    <a class="menu-link" href="/admin/admindash"> <i class="icon material-icons md-home"></i>
+                    <a class="menu-link" href="/admin/home"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
                 <li class="menu-item has-submenu">
-                    <a class="menu-link" href="/admin/userlist"> <i class="icon material-icons md-shopping_cart"></i>
+                    <a class="menu-link" href='/admin/customer'> <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Customers</span>
                     </a>
                     <a class="menu-link" href="page-orders-1.html"> <i class="icon material-icons md-shopping_cart"></i>
@@ -45,9 +45,6 @@
                     <a class="menu-link" href="page-products-list.html"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Products</span>
                     </a>
-                    </div>
-                </li>
-                <li class="menu-item has-submenu">
                     <a class="menu-link" href="page-orders-1.html"> <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Orders</span>
                     </a>
@@ -99,23 +96,99 @@
                 </ul>
             </div>
         </header>
-        <section class="content-main">
-            <div class="content-header">
-                <div>
-                    <h2 class="content-title card-title">Dashboard </h2>
-        </section> <!-- content-main end// -->
+<section class="content-main">
+    <div class="content-header">
+        <h2 class="content-title">Users List</h2>
+        <div>
+            <!-- <a href="#" class="btn btn-primary"><i class="material-icons md-plus"></i> Create new</a> -->
+        </div>
+    </div>
+    <div class="card mb-4">
+        <header class="card-header">
+            <div class="row gx-3">
+                <div class="col-lg-4 col-md-6 me-auto">
+                    <input type="text" placeholder="Search..." class="form-control">
+                </div>
+                <div class="col-lg-2 col-md-3 col-6">
+                    <select class="form-select">
+                        <option>Status</option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                    </select>
+                </div>
             </div>
-        </footer>
-    </main>
-    <script src="/Adminassets/js/vendors/jquery-3.6.0.min.js"></script>
-    <script src="/Adminassets/js/vendors/bootstrap.bundle.min.js"></script>
-    <script src="/Adminassets/js/vendors/select2.min.js"></script>
-    <script src="/Adminassets/js/vendors/perfect-scrollbar.js"></script>
-    <script src="/Adminassets/js/vendors/jquery.fullscreen.min.js"></script>
-    <script src="/Adminassets/js/vendors/chart.js"></script>
-    <!-- Main Script -->
-    <script src="/Adminassets/js/main.js" type="text/javascript"></script>
-    <script src="/Adminassets/js/custom-chart.js" type="text/javascript"></script>
-</body>
+        </header>
+        
+        <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th>Email</th>
+                    <th>Status</th>
+                    <th>Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% users.forEach(user => { %>
+                    <tr>
+                      <td><%= user.email %></td>
+                      <td><%= user.blocked? 'Blocked' : 'Active' %></td>
+                      <td>
+                        <form id="block-unblock-form" action="" method="POST">
+                          <input type="hidden" name="userId" value="<%= user._id %>">
+                          <button type="submit"><%= user.blocked? 'Unblock' : 'Block' %></button>
+                        </form>
+                      </td>
+                    </tr>
+                  <% }); %>
+                </tbody>
+              </table>
+            </div>
+          </div>
 
+
+<!-- pagination -->
+    <div class="pagination-area mt-15 mb-50">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-start">
+                <li class="page-item active"><a class="page-link" href="#">01</a></li>
+                <li class="page-item"><a class="page-link" href="#">02</a></li>
+                <li class="page-item"><a class="page-link" href="#">03</a></li>
+                <li class="page-item"><a class="page-link dot" href="#">...</a></li>
+                <li class="page-item"><a class="page-link" href="#">16</a></li>
+                <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li>
+            </ul>
+        </nav>
+    </div>
+</section> 
+<footer class="main-footer font-xs">
+    <div class="row pb-30 pt-15">
+        <div class="col-sm-6">
+            <script>
+            document.write(new Date().getFullYear())
+            </script> ©, Evara - HTML Ecommerce Template .
+        </div>
+        <div class="col-sm-6">
+            <div class="text-sm-end">
+                All rights reserved
+            </div>
+        </div>
+    </div>
+</footer>
+</main>
+<!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+
+<script src="/Adminassets/js/vendors/jquery-3.6.0.min.js"></script>
+<script src="/Adminassets/js/vendors/bootstrap.bundle.min.js"></script>
+<script src="/Adminassets/js/vendors/select2.min.js"></script>
+<script src="/Adminassets/js/vendors/perfect-scrollbar.js"></script>
+<script src="/Adminassets/js/vendors/jquery.fullscreen.min.js"></script>
+<script src="/Adminassets/js/vendors/chart.js"></script>
+
+<!-- Main Script  -->
+<script src="/Adminassets/js/main.js" type="text/javascript"></script>
+
+</body>
 </html>
