--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -26,13 +26,13 @@
                   <div class="heading_s1">
                     <h3 class="mb-30">Login</h3>
                   </div>
-                  <div><% if(typeof message !== 'undefined'){ %>
+                  <!-- <div><% if(typeof message !== 'undefined'){ %>
                     <h4 style="color: red;"><%=message %></h4>
                 <% } %> </div>
                 <div id="emailError" style="color: red;"></div>
               </div>
               <div id="passwordError" style="color: red;"></div>
-            </div>
+            </div> -->
                 
                 
             <form
